--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0", maximum-scale=5" />
-    <title>Σύγκριση τιμών σε χιλιάδες online καταστήματα | BestPrice</title>
-    <meta name="description" content="Σύγκρινε τιμές, χαρακτηριστικά, αξιολογήσεις & βρες την καλύτερη τιμή, προσφορές & ευκαιρίες σε χιλιάδες online καταστήματα στην Ελλάδα." />
-    <meta name="author" content="BestPrice" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>nexushub-commerce</title>
+    <meta name="description" content="Lovable Generated Project" />
+    <meta name="author" content="Lovable" />
 
     <meta property="og:title" content="Lovable Generated Project" />
     <meta property="og:description" content="Lovable Generated Project" />
