--- a/index.html
+++ b/index.html
@@ -15,6 +15,59 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <link crossorigin="" href="//bp.pstatic.gr/public/dist/bestprice_67408616cd3aaf926ea0.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://bp.pstatic.gr/public/dist/99772_b04e97d0b76ad866ee1d.css">
+    <link rel="stylesheet" type="text/css" href="//bp.pstatic.gr/public/dist/65434_f1c5bce5c152ba90fe8c.css">
+    <link charset="utf-8" rel="preload" as="style" href="//bp.pstatic.gr/public/dist/62091_759480e489fd0ef92b7c.css">
+    <link charset="utf-8" rel="preload" as="script" href="//bp.pstatic.gr/public/dist/62091_366a48e3986c91683da3.js">
+    <script async="" src="https://www.clarity.ms/tag/i5aetgijuy"></script>
+    <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-TBCWFBCF71"></script>
+    <script async="" src="/public/js/fbevents.js"></script>
+    <link charset="utf-8" rel="preload" as="script" href="//bp.pstatic.gr/public/dist/89886_f96cbd19b7c21c78319a.js">
+    <link rel="stylesheet" type="text/css" href="//bp.pstatic.gr/public/dist/85296_15da0cf0bd7f459f9b37.css">
+    <link charset="utf-8" rel="preload" as="script" href="//bp.pstatic.gr/public/dist/40873_783a6e9f577a9e6c56a8.js">
+    <link charset="utf-8" rel="preload" as="script" href="//bp.pstatic.gr/public/dist/51807_2908739698daf7a3b0c5.js">
+    <link charset="utf-8" rel="preload" as="script" href="//bp.pstatic.gr/public/dist/9142_f72ee6c731ca39092c7c.js">
+    <link charset="utf-8" rel="preload" as="style" href="//bp.pstatic.gr/public/dist/333_213631b3014239090ad1.css">
+    <link charset="utf-8" rel="preload" as="script" href="//bp.pstatic.gr/public/dist/333_10323b82fbff8b4d6629.js">
+    <link rel="stylesheet" type="text/css" href="//bp.pstatic.gr/public/dist/35151_e74fcf2b3287f2647ae9.css">
+    <link rel="stylesheet" type="text/css" href="//bp.pstatic.gr/public/dist/88932_2b872f83df0caa8a79ee.css">
+    <link rel="stylesheet" type="text/css" href="//bp.pstatic.gr/public/dist/38828_49d4959fb2f702591b88.css">
+    <link rel="stylesheet" type="text/css" href="//bp.pstatic.gr/public/dist/15999_5c7b586474a378bcba06.css">
+    <link charset="utf-8" rel="preload" as="script" href="//bp.pstatic.gr/public/dist/50229_1ec994b78f21bf3cf5a2.js">
+    <link charset="utf-8" rel="preload" as="script" href="//bp.pstatic.gr/public/dist/88055_476cba1faea5347051e7.js">
+    <link charset="utf-8" rel="preload" as="script" href="//bp.pstatic.gr/public/dist/58646_185ec165f123ff7c0006.js">
+    <link charset="utf-8" rel="preload" as="script" href="//bp.pstatic.gr/public/dist/36683_ea6c1b1cbbc611e5bcd2.js">
+    <link charset="utf-8" rel="preload" as="script" href="//bp.pstatic.gr/public/dist/3384_f16da2f6e474da6e88b9.js">
+    <link charset="utf-8" rel="preload" as="script" href="//bp.pstatic.gr/public/dist/7409_4c236841bb7257e618aa.js">
+    <link charset="utf-8" rel="preload" as="script" href="//bp.pstatic.gr/public/dist/87191_48d097f00390d4486253.js">
+    <link charset="utf-8" rel="preload" as="style" href="//bp.pstatic.gr/public/dist/60643_0449165d75c8fc5409df.css">
+    <link charset="utf-8" rel="preload" as="script" href="//bp.pstatic.gr/public/dist/60643_38ad17d44850981f07cb.js">
+    <link charset="utf-8" rel="preload" as="script" href="//bp.pstatic.gr/public/dist/40853_687d28b91a36150d0115.js">
+    <link charset="utf-8" rel="preload" as="script" href="//bp.pstatic.gr/public/dist/48214_af41e0018e65e974a0c5.js">
+    <link charset="utf-8" rel="preload" as="script" href="//bp.pstatic.gr/public/dist/76852_b213cabef74ad2ef9587.js">
+    <link charset="utf-8" rel="preload" as="style" href="//bp.pstatic.gr/public/dist/58179_7d80b4d18ed25984a87a.css">
+    <link charset="utf-8" rel="preload" as="script" href="//bp.pstatic.gr/public/dist/58179_346ab1e9bf69497aa586.js">
+    <link charset="utf-8" rel="preload" as="style" href="//bp.pstatic.gr/public/dist/75404_2e74dfc457e95b36bbd6.css">
+    <link charset="utf-8" rel="preload" as="script" href="//bp.pstatic.gr/public/dist/75404_eee8262c73acac38a321.js">
+    <link charset="utf-8" rel="preload" as="style" href="//bp.pstatic.gr/public/dist/35699_503bccc4c5ad81e03f70.css">
+    <link charset="utf-8" rel="preload" as="script" href="//bp.pstatic.gr/public/dist/35699_d4ac78e2dc4efa0c4885.js">
+    <link charset="utf-8" rel="preload" as="style" href="//bp.pstatic.gr/public/dist/34839_8e2fad4722ec0e2a1439.css">
+    <link charset="utf-8" rel="preload" as="script" href="//bp.pstatic.gr/public/dist/34839_a89084db0c81edf8bf97.js">
+    <link rel="stylesheet" type="text/css" href="//bp.pstatic.gr/public/dist/82727_49d4959fb2f702591b88.css">
+    <link rel="stylesheet" type="text/css" href="//bp.pstatic.gr/public/dist/27626_368eec7acbcd5f8cad5b.css">
+    <link rel="stylesheet" type="text/css" href="//bp.pstatic.gr/public/dist/46053_f4f92007162cbfe51fcd.css">
+    <link rel="stylesheet" type="text/css" href="//bp.pstatic.gr/public/dist/72111_2a6d00cc245cf516329d.css">
+    <link rel="stylesheet" type="text/css" href="//bp.pstatic.gr/public/dist/22958_19ef1040adc2eb51d6a9.css">
+    <link rel="prefetch" as="style" href="//bp.pstatic.gr/public/dist/38863_4b848757ba962ef89a84.css">
+    <link rel="stylesheet" type="text/css" href="//bp.pstatic.gr/public/dist/75404_2e74dfc457e95b36bbd6.css">
+    <link rel="stylesheet" type="text/css" href="//bp.pstatic.gr/public/dist/35699_503bccc4c5ad81e03f70.css">
+    <link rel="stylesheet" type="text/css" href="//bp.pstatic.gr/public/dist/32295_4637bd0c5884596eca31.css">
+    <link rel="stylesheet" type="text/css" href="//bp.pstatic.gr/public/dist/58129_7dbb268f345bc80a5cb2.css">
+    <link rel="stylesheet" type="text/css" href="//bp.pstatic.gr/public/dist/70240_e64855aa54e85fafa89c.css">
+    <link rel="stylesheet" type="text/css" href="//bp.pstatic.gr/public/dist/22638_729706ef778bc03afa97.css">
+    <link rel="stylesheet" type="text/css" href="//bp.pstatic.gr/public/dist/76986_d9278f2767bf75debad5.css">
   </head>
 
   <body>
