--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <link crossorigin="" href="//bp.pstatic.gr/public/dist/bestprice_67408616cd3aaf926ea0.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="//bp.pstatic.gr/public/dist/10032_aeb9874ec0df3ad0938d.css">
     <link rel="stylesheet" type="text/css" href="https://bp.pstatic.gr/public/dist/99772_b04e97d0b76ad866ee1d.css">
     <link rel="stylesheet" type="text/css" href="//bp.pstatic.gr/public/dist/65434_f1c5bce5c152ba90fe8c.css">
     <link charset="utf-8" rel="preload" as="style" href="//bp.pstatic.gr/public/dist/62091_759480e489fd0ef92b7c.css">
